V6 SCSS y variables aplicadas a todas las paginas

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -19,7 +19,7 @@
     <div class="container-fluid">
         <header class="row" >
             <div class="col-sm-12 col-md-12 p-3">
-                <a href="index.html"><h1 class="animate__animated animate__fadeInLeft">PERFUMERIA BEAUTY</h1></a>
+                <a href="../index.html"><h1 class="animate__animated animate__fadeInLeft">PERFUMERIA BEAUTY</h1></a>
               
             </div>
           
@@ -124,8 +124,8 @@
                             <div class="tarjeta_footer_1">
                                 <img src="../img/logos_iconos/tarjetas.jpg" alt="imagen_tarjeta">
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Aceptamos todas las tarjetas</p>
+                            <div>
+                                <p>Aceptamos todas las tarjetas</p>
                             </div>
                         </div>
                     </div>
@@ -134,8 +134,8 @@
                             <div class="tarjeta_footer_1">
                                 <img  src="../img/logos_iconos/envio.jpg" alt="imagen_vehiculo">
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Envios a todo el pais</p>
+                            <div>
+                                <p>Envios a todo el pais</p>
                             </div>
                         </div>
                     </div>
@@ -144,8 +144,8 @@
                             <div class="tarjeta_footer_1">
                                 <a href="https://www.google.com.ar/maps/place/Perfumer%C3%ADa+Beauty/@-31.8607334,-59.0335034,17z/data=!4m5!3m4!1s0x95b181a3663dd715:0x1a37de5ed7d7fd16!8m2!3d-31.8607334!4d-59.0313147"><img  src="../img/logos_iconos/Sucursal.jpg" alt="imagen_sucursal"> </a>
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Sucursal</p>
+                            <div>
+                                <p>Sucursal</p>
                             </div>
                         </div>
                     </div>
@@ -154,8 +154,8 @@
                             <div class="tarjeta_footer_1">
                                 <img  src="../img/logos_iconos/regalo.jpg" alt="imagen_headset">
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Tenemos los mejores precios</p>
+                            <div>
+                                <p>Tenemos los mejores precios</p>
                             </div>
                         </div>
                     </div>
@@ -164,12 +164,12 @@
                             <div class="tarjeta_footer_1">
                                 <a href="../html/contacto.html"><img src="../img/logos_iconos/contacto.jpg" alt="imagen_headset"></a>
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Contactanos</p>
+                            <div>
+                                <p>Contactanos</p>
                             </div>
                         </div>
                     </div>
-            </section>       
+            </section>        
 
             <section> 
                 <div class="row">
