--- a/html/maquillajes.html
+++ b/html/maquillajes.html
@@ -19,7 +19,7 @@
     <div class="container-fluid">
         <header class="row" >
             <div class="col-sm-12 col-md-12 p-3">
-                <a href="index.html"><h1 class="animate__animated animate__fadeInLeft">PERFUMERIA BEAUTY</h1></a>
+                <a href="../index.html"><h1 class="animate__animated animate__fadeInLeft">PERFUMERIA BEAUTY</h1></a>
               
             </div>
           
@@ -81,7 +81,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/maquillajes/maquillajes_sombras2.jpg" alt="imagen sombra">
                             <ul>
-                                <li><h2>LANCOME</h2></li>
+                                <li><h3>LANCOME</h3></li>
                                 <li><p>Hypnose Palette 5 Couleurs</p></li>
                             </ul>
                             <ul class="boton_compra_maquillajes">
@@ -97,7 +97,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/maquillajes/maquillajes_sombras1.jpg" alt="imagen sombra">
                             <ul>
-                                <li><h2>DIOR BACKSTAGE</h2></li>
+                                <li><h3>DIOR BACKSTAGE</h3></li>
                                 <li><p>Backstage Custom Eye Palette</p></li>
                             </ul>
                             <ul class="boton_compra_maquillajes">
@@ -113,7 +113,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/maquillajes/maquillajes_sombras3.jpg" alt="imagen sombra">
                             <ul>
-                                <li><h2>GIVENCHY</h2></li>
+                                <li><h3>GIVENCHY</h3></li>
                                 <li><p>LE 9</p></li>
                             </ul>
                             <ul class="boton_compra_maquillajes">
@@ -129,7 +129,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/maquillajes/maquillajes_rimmel1.jpg" alt="imagen rimmel">
                             <ul>
-                                <li><h2>MAYBELLINE</h2></li>
+                                <li><h3>MAYBELLINE</h3></li>
                                 <li><p>The Falsies Lash Lift Waterproof</p></li>
                             </ul>
                             <ul class="boton_compra_maquillajes">
@@ -145,7 +145,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/maquillajes/maquillajes_rimmel3.jpg" alt="imagen rimmel">
                             <ul>
-                                <li><h2>MAYBELLINE</h2></li>
+                                <li><h3>MAYBELLINE</h3></li>
                                 <li><p>The Falsies Lash Lift Waterproof</p></li>
                             </ul>
                             <ul class="boton_compra_maquillajes">
@@ -161,7 +161,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/maquillajes/maquillajes_rimmel2.jpg" alt="imagen rimmel">
                             <ul>
-                                <li><h2>MAYBELLINE</h2></li>
+                                <li><h3>MAYBELLINE</h3></li>
                                 <li> <p>Colossal Big Shot Washable Waterproof</p></li>
                             </ul>
                             <ul class="boton_compra_maquillajes">
@@ -177,7 +177,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/maquillajes/maquillajes_base1.jpg" alt="imagen base">
                             <ul>
-                                <li><h2>MAYBELLINE</h2></li>
+                                <li><h3>MAYBELLINE</h3></li>
                                 <li><p>Fit Me Matte Poreless 16H</p></li>
                             </ul>
                             <ul class="boton_compra_maquillajes">
@@ -193,7 +193,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/maquillajes/maquillajes_base2.jpg" alt="imagen base">
                             <ul>
-                                <li><h2>MAYBELLINE</h2></li>
+                                <li><h3>MAYBELLINE</h3></li>
                                 <li><p>Fit Me Matte Poreless</p></li>
                             </ul>
                             <ul class="boton_compra_maquillajes">
@@ -209,7 +209,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/maquillajes/maquillajes_base3.jpg" alt="imagen base">
                             <ul>
-                                <li><h2>DIOR</h2></li>
+                                <li><h3>DIOR</h3></li>
                                 <li><p>Diorskin Forever Undercover</p></li>
                             </ul>
                             <ul class="boton_compra_maquillajes">
@@ -225,7 +225,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/maquillajes/maquillajes_labial1.jpg" alt="imagen labial">
                             <ul>
-                                <li><h2>MAYBELLINE</h2></li>
+                                <li><h3>MAYBELLINE</h3></li>
                                 <li><p>Color Sensational Mattes</p></li>
                             </ul>
                             <ul class="boton_compra_maquillajes">
@@ -241,7 +241,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/maquillajes/maquillajes_labial2.jpg" alt="imagen labial">
                             <ul>
-                                <li><h2>LANCOME</h2></li>
+                                <li><h3>LANCOME</h3></li>
                                 <li><p>L Absolu Rouge Cream</p></li>
                             </ul>
                             <ul class="boton_compra_maquillajes">
@@ -257,7 +257,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/maquillajes/maquillajes_labial3.jpg" alt="imagen labial">
                             <ul>
-                                <li><h2>MAYBELLINE</h2></li>
+                                <li><h3>MAYBELLINE</h3></li>
                                 <li><p>Color Sensational Stick</p></li>
                             </ul>
                             <ul class="boton_compra_maquillajes">
@@ -282,8 +282,8 @@
                             <div class="tarjeta_footer_1">
                                 <img src="../img/logos_iconos/tarjetas.jpg" alt="imagen_tarjeta">
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Aceptamos todas las tarjetas</p>
+                            <div>
+                                <p>Aceptamos todas las tarjetas</p>
                             </div>
                         </div>
                     </div>
@@ -292,8 +292,8 @@
                             <div class="tarjeta_footer_1">
                                 <img  src="../img/logos_iconos/envio.jpg" alt="imagen_vehiculo">
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Envios a todo el pais</p>
+                            <div>
+                                <p>Envios a todo el pais</p>
                             </div>
                         </div>
                     </div>
@@ -302,8 +302,8 @@
                             <div class="tarjeta_footer_1">
                                 <a href="https://www.google.com.ar/maps/place/Perfumer%C3%ADa+Beauty/@-31.8607334,-59.0335034,17z/data=!4m5!3m4!1s0x95b181a3663dd715:0x1a37de5ed7d7fd16!8m2!3d-31.8607334!4d-59.0313147"><img  src="../img/logos_iconos/Sucursal.jpg" alt="imagen_sucursal"> </a>
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Sucursal</p>
+                            <div>
+                                <p>Sucursal</p>
                             </div>
                         </div>
                     </div>
@@ -312,8 +312,8 @@
                             <div class="tarjeta_footer_1">
                                 <img  src="../img/logos_iconos/regalo.jpg" alt="imagen_headset">
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Tenemos los mejores precios</p>
+                            <div>
+                                <p>Tenemos los mejores precios</p>
                             </div>
                         </div>
                     </div>
@@ -322,12 +322,12 @@
                             <div class="tarjeta_footer_1">
                                 <a href="../html/contacto.html"><img src="../img/logos_iconos/contacto.jpg" alt="imagen_headset"></a>
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Contactanos</p>
+                            <div>
+                                <p>Contactanos</p>
                             </div>
                         </div>
                     </div>
-            </section>
+            </section>        
 
             <section> 
                 <div class="row">
