--- a/html/perfumes.html
+++ b/html/perfumes.html
@@ -19,7 +19,7 @@
     <div class="container-fluid">
         <header class="row" >
             <div class="col-sm-12 col-md-12 p-3">
-                <a href="index.html"><h1 class="animate__animated animate__fadeInLeft">PERFUMERIA BEAUTY</h1></a>
+                <a href="../index.html"><h1 class="animate__animated animate__fadeInLeft">PERFUMERIA BEAUTY</h1></a>
               
             </div>
           
@@ -78,7 +78,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/perfumes/imagen_perfume_1.jpg" alt="">
                             <ul>
-                                <li><h2>BOSS</h2></li>
+                                <li><h3>BOSS</h3></li>
                                 <li><p>Boss The Scent For Her EDP 100 ml</p></li>
                             </ul>
                             <ul class="boton_compra_perfume">
@@ -94,7 +94,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/perfumes/imagen_perfume_12.jpg" alt="">
                             <ul>
-                                <li><h2>CAROLINA HERRERA</h2></li>
+                                <li><h3>CAROLINA HERRERA</h3></li>
                                 <li><p>212 Heroes For Her EDP 100 ml + Bolso</p></li>
                             </ul>
                             <ul class="boton_compra_perfume">
@@ -110,7 +110,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/perfumes/imagen_perfume_3.jpg" alt="">
                             <ul>
-                                <li><h2>CAROLINA HERRERA</h2></li>
+                                <li><h3>CAROLINA HERRERA</h3></li>
                                 <li><p>212 Heroes For Her EDP 100 ml</p></li>
                             </ul>
                             <ul class="boton_compra_perfume">
@@ -126,7 +126,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/perfumes/imagen_perfume_13.jpg" alt="">
                             <ul>
-                                <li><h2>CAROLINA HERRERA</h2></li>
+                                <li><h3>CAROLINA HERRERA</h3></li>
                                 <li><p>Good Girl EDP 100 ml</p></li>
                             </ul>
                             <ul class="boton_compra_perfume">
@@ -142,7 +142,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/perfumes/imagen_perfume_14.jpg" alt="">
                             <ul>
-                                <li><h2>LANCOME</h2></li>
+                                <li><h3>LANCOME</h3></li>
                                 <li><p>La Vie Est Belle EDP 50 ml + Set Happiness</p></li>
                             </ul>
                             <ul class="boton_compra_perfume">
@@ -158,7 +158,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/perfumes/imagen_perfume_4.jpg" alt="">
                             <ul>
-                                <li><h2>DIOR</h2></li>
+                                <li><h3>DIOR</h3></li>
                                 <li> <p>Miss Dior EDT 100 ml</p></li>
                             </ul>
                             <ul class="boton_compra_perfume">
@@ -174,7 +174,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/perfumes/imagen_perfume_5.jpg" alt="">
                             <ul>
-                                <li><h2>PACO RABANNE</h2></li>
+                                <li><h3>PACO RABANNE</h3></li>
                                 <li><p>Phantom EDT Ed. Limitada Collector 10 ml</p></li>
                             </ul>
                             <ul class="boton_compra_perfume">
@@ -190,7 +190,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/perfumes/imagen_perfume_11.jpg" alt="">
                             <ul>
-                                <li><h2>CAROLINA HERRERA</h2></li>
+                                <li><h3>CAROLINA HERRERA</h3></li>
                                 <li><p>212 Vip Men Black EDP 100 ml + Shower Gel</p></li>
                             </ul>
                             <ul class="boton_compra_perfume">
@@ -206,7 +206,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/perfumes/imagen_perfume_6.jpg" alt="">
                             <ul>
-                                <li><h2>CAROLINA HERRERA</h2></li>
+                                <li><h3>CAROLINA HERRERA</h3></li>
                                 <li><p>212 Men EDT 100 ml</p></li>
                             </ul>
                             <ul class="boton_compra_perfume">
@@ -222,7 +222,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/perfumes/imagen_perfume_7.jpg" alt="">
                             <ul>
-                                <li><h2>CAROLINA HERRERA</h2></li>
+                                <li><h3>CAROLINA HERRERA</h3></li>
                                 <li><p>212 Vip Men Black EDP 100 ml</p></li>
                             </ul>
                             <ul class="boton_compra_perfume">
@@ -238,7 +238,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/perfumes/imagen_perfume_10.jpg" alt="">
                             <ul>
-                                <li><h2>CAROLINA HERRERA</h2></li>
+                                <li><h3>CAROLINA HERRERA</h3></li>
                                 <li><p>Bad Boy EDT 100 ml + Gel de ducha</p></li>
                             </ul>
                             <ul class="boton_compra_perfume">
@@ -254,7 +254,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/perfumes/imagen_perfume_8.jpg" alt="">
                             <ul>
-                                <li><h2>CAROLINA HERRERA</h2></li>
+                                <li><h3>CAROLINA HERRERA</h3></li>
                                 <li><p>Bad Boy EDT 100 ml</p></li>
                             </ul>
                             <ul class="boton_compra_perfume">
@@ -279,8 +279,8 @@
                             <div class="tarjeta_footer_1">
                                 <img src="../img/logos_iconos/tarjetas.jpg" alt="imagen_tarjeta">
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Aceptamos todas las tarjetas</p>
+                            <div>
+                                <p>Aceptamos todas las tarjetas</p>
                             </div>
                         </div>
                     </div>
@@ -289,8 +289,8 @@
                             <div class="tarjeta_footer_1">
                                 <img  src="../img/logos_iconos/envio.jpg" alt="imagen_vehiculo">
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Envios a todo el pais</p>
+                            <div>
+                                <p>Envios a todo el pais</p>
                             </div>
                         </div>
                     </div>
@@ -299,8 +299,8 @@
                             <div class="tarjeta_footer_1">
                                 <a href="https://www.google.com.ar/maps/place/Perfumer%C3%ADa+Beauty/@-31.8607334,-59.0335034,17z/data=!4m5!3m4!1s0x95b181a3663dd715:0x1a37de5ed7d7fd16!8m2!3d-31.8607334!4d-59.0313147"><img  src="../img/logos_iconos/Sucursal.jpg" alt="imagen_sucursal"> </a>
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Sucursal</p>
+                            <div>
+                                <p>Sucursal</p>
                             </div>
                         </div>
                     </div>
@@ -309,8 +309,8 @@
                             <div class="tarjeta_footer_1">
                                 <img  src="../img/logos_iconos/regalo.jpg" alt="imagen_headset">
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Tenemos los mejores precios</p>
+                            <div>
+                                <p>Tenemos los mejores precios</p>
                             </div>
                         </div>
                     </div>
@@ -319,8 +319,8 @@
                             <div class="tarjeta_footer_1">
                                 <a href="../html/contacto.html"><img src="../img/logos_iconos/contacto.jpg" alt="imagen_headset"></a>
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Contactanos</p>
+                            <div>
+                                <p>Contactanos</p>
                             </div>
                         </div>
                     </div>
