--- a/html/unias.html
+++ b/html/unias.html
@@ -19,7 +19,7 @@
     <div class="container-fluid">
         <header class="row" >
             <div class="col-sm-12 col-md-12 p-3">
-                <a href="index.html"><h1 class="animate__animated animate__fadeInLeft">PERFUMERIA BEAUTY</h1></a>
+                <a href="../index.html"><h1 class="animate__animated animate__fadeInLeft">PERFUMERIA BEAUTY</h1></a>
               
             </div>
           
@@ -82,7 +82,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/unias/meline2.jpg" alt="imagen sombra">
                             <ul>
-                                <li><h2>MELINE</h2></li>
+                                <li><h3>MELINE</h3></li>
                                 <li><p>Esmaltes semipermanentes 15ml</p></li>
                             </ul>
                             <ul class="boton_compra_unias">
@@ -98,7 +98,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/unias/cheri2.jpg" alt="imagen sombra">
                             <ul>
-                                <li><h2>CHERIMOYA</h2></li>
+                                <li><h3>CHERIMOYA</h3></li>
                                 <li><p>Esmaltes semipermanentes 8ml</p></li>
                             </ul>
                             <ul class="boton_compra_unias">
@@ -114,7 +114,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/unias/tejar2.jpg" alt="imagen sombra">
                             <ul>
-                                <li><h2>TEJAR</h2></li>
+                                <li><h3>TEJAR</h3></li>
                                 <li><p>Esmaltes semipermanentes 15ml</p></li>
                             </ul>
                             <ul class="boton_compra_unias">
@@ -130,7 +130,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/unias/gel5.jpg" alt="imagen rimmel">
                             <ul>
-                                <li><h2>QBD</h2></li>
+                                <li><h3>QBD</h3></li>
                                 <li><p>Polygel 50 ml</p></li>
                             </ul>
                             <ul class="boton_compra_unias">
@@ -146,7 +146,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/unias/gel1.jpg" alt="imagen rimmel">
                             <ul>
-                                <li><h2>CHERIMOYA</h2></li>
+                                <li><h3>CHERIMOYA</h3></li>
                                 <li><p>Gel construccion 45 gr</p></li>
                             </ul>
                             <ul class="boton_compra_unias">
@@ -162,7 +162,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/unias/gel4.jpg" alt="imagen rimmel">
                             <ul>
-                                <li><h2>CHERIMOYA</h2></li>
+                                <li><h3>CHERIMOYA</h3></li>
                                 <li> <p>Polygel 50 ml</p></li>
                             </ul>
                             <ul class="boton_compra_unias">
@@ -178,7 +178,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/unias/acrilicas4.jpg" alt="imagen base">
                             <ul>
-                                <li><h2>CHERIMOYA</h2></li>
+                                <li><h3>CHERIMOYA</h3></li>
                                 <li><p>Vaso dapen</p></li>
                             </ul>
                             <ul class="boton_compra_unias">
@@ -194,7 +194,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/unias/acrilicas2.jpg" alt="imagen base">
                             <ul>
-                                <li><h2>CHERIMOYA</h2></li>
+                                <li><h3>CHERIMOYA</h3></li>
                                 <li><p>Polimero 15 gr </p></li>
                             </ul>
                             <ul class="boton_compra_unias">
@@ -210,7 +210,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/unias/acrilicas1.jpg" alt="imagen base">
                             <ul>
-                                <li><h2>CHERIMOYA</h2></li>
+                                <li><h3>CHERIMOYA</h3></li>
                                 <li><p>Monomero 100 ml</p></li>
                             </ul>
                             <ul class="boton_compra_unias">
@@ -226,7 +226,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/unias/removedor2.jpg" alt="imagen labial">
                             <ul>
-                                <li><h2>CHERIMOYA</h2></li>
+                                <li><h3>CHERIMOYA</h3></li>
                                 <li><p>Removedor esmalte semi 500 ml</p></li>
                             </ul>
                             <ul class="boton_compra_unias">
@@ -242,7 +242,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/unias/removedor3.jpg" alt="imagen labial">
                             <ul>
-                                <li><h2>XULU</h2></li>
+                                <li><h3>XULU</h3></li>
                                 <li><p>Removedor esmalte semi 250 ml</p></li>
                             </ul>
                             <ul class="boton_compra_unias">
@@ -258,7 +258,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/unias/removedor5.jpg" alt="imagen labial">
                             <ul>
-                                <li><h2>MELINE</h2></li>
+                                <li><h3>MELINE</h3></li>
                                 <li><p>Removedor esmalte semi 500 ml</p></li>
                             </ul>
                             <ul class="boton_compra_unias">
@@ -283,8 +283,8 @@
                             <div class="tarjeta_footer_1">
                                 <img src="../img/logos_iconos/tarjetas.jpg" alt="imagen_tarjeta">
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Aceptamos todas las tarjetas</p>
+                            <div>
+                                <p>Aceptamos todas las tarjetas</p>
                             </div>
                         </div>
                     </div>
@@ -293,8 +293,8 @@
                             <div class="tarjeta_footer_1">
                                 <img  src="../img/logos_iconos/envio.jpg" alt="imagen_vehiculo">
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Envios a todo el pais</p>
+                            <div>
+                                <p>Envios a todo el pais</p>
                             </div>
                         </div>
                     </div>
@@ -303,8 +303,8 @@
                             <div class="tarjeta_footer_1">
                                 <a href="https://www.google.com.ar/maps/place/Perfumer%C3%ADa+Beauty/@-31.8607334,-59.0335034,17z/data=!4m5!3m4!1s0x95b181a3663dd715:0x1a37de5ed7d7fd16!8m2!3d-31.8607334!4d-59.0313147"><img  src="../img/logos_iconos/Sucursal.jpg" alt="imagen_sucursal"> </a>
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Sucursal</p>
+                            <div>
+                                <p>Sucursal</p>
                             </div>
                         </div>
                     </div>
@@ -313,8 +313,8 @@
                             <div class="tarjeta_footer_1">
                                 <img  src="../img/logos_iconos/regalo.jpg" alt="imagen_headset">
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Tenemos los mejores precios</p>
+                            <div>
+                                <p>Tenemos los mejores precios</p>
                             </div>
                         </div>
                     </div>
@@ -323,8 +323,8 @@
                             <div class="tarjeta_footer_1">
                                 <a href="../html/contacto.html"><img src="../img/logos_iconos/contacto.jpg" alt="imagen_headset"></a>
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Contactanos</p>
+                            <div>
+                                <p>Contactanos</p>
                             </div>
                         </div>
                     </div>
