--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                 <div class="recommended_1 text-center">
                                     <ul>
                                         <li><img src="img/perfumes/imagen_perfume_1.jpg" alt="imagen_prefume"></li>
-                                        <li><h2>BOSS</h2></li>
+                                        <li><h3>BOSS</h3></li>
                                         <li><p>Boss Scent For Her EDP 100 ml</p></li>
                                         <button class="button_recommended">COMPRAR</button>
                                     </ul>
@@ -172,7 +172,7 @@
                                 <div class="recommended_1 text-center">
                                     <ul>
                                         <li><img src="img/perfumes/imagen_perfume_13.jpg" alt="imagen_prefume"></li>
-                                        <li><h2>CAROLINA HERRERA</h2></li>
+                                        <li><h3>CAROLINA HERRERA</h3></li>
                                         <li><p>Good Girl For Her EDP 100 ml</p></li>
                                         <button class="button_recommended">COMPRAR</button>
                                     </ul>
@@ -182,7 +182,7 @@
                                 <div class="recommended_1 text-center">
                                     <ul>
                                         <li><img src="img/perfumes/imagen_perfume_3.jpg" alt="imagen_prefume"></li>
-                                        <li><h2>CAROLINA HERRERA</h2></li>
+                                        <li><h3>CAROLINA HERRERA</h3></li>
                                         <li><p>212 Heroes For Her EDP 100 ml</p></li>
                                         <button class="button_recommended">COMPRAR</button>
                                     </ul>
@@ -193,7 +193,7 @@
                                 <div class="recommended_1 text-center">
                                     <ul>
                                         <li><img src="img/perfumes/imagen_perfume_8.jpg" alt="imagen_prefume"></li>
-                                        <li><h2>CAROLINA HERRERA</h2></li>
+                                        <li><h3>CAROLINA HERRERA</h3></li>
                                         <li><p>Bad Boy For Him EDT 100 ml</p></li>
                                         <button class="button_recommended">COMPRAR</button>
                                     </ul>
@@ -203,7 +203,7 @@
                                 <div class="recommended_1 text-center">
                                     <ul>
                                         <li><img src="img/perfumes/imagen_perfume_5.jpg" alt="imagen_prefume"></li>
-                                        <li><h2>PACO RABANNE</h2></li>
+                                        <li><h3>PACO RABANNE</h3></li>
                                         <li><p>Phantom EDT 10 ml</p></li>
                                         <button class="button_recommended">COMPRAR</button>
                                     </ul>
@@ -213,7 +213,7 @@
                                 <div class="recommended_1 text-center">
                                     <ul>                        
                                         <li><li><img src="img/perfumes/imagen_perfume_6.jpg" alt="imagen_prefume"></li></li>
-                                        <li><h2>CAROLINA HERRERA</h2></li>
+                                        <li><h3>CAROLINA HERRERA</h3></li>
                                         <li><p>212 Men EDT 100 ml</p></li>
                                         <button class="button_recommended">COMPRAR</button>
                                     </ul>
@@ -235,8 +235,8 @@
                             <div class="tarjeta_footer_1">
                                 <img src="img/logos_iconos/tarjetas.jpg" alt="imagen_tarjeta">
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Aceptamos todas las tarjetas</p>
+                            <div>
+                                <p>Aceptamos todas las tarjetas</p>
                             </div>
                         </div>
                     </div>
@@ -245,8 +245,8 @@
                             <div class="tarjeta_footer_1">
                                 <img  src="img/logos_iconos/envio.jpg" alt="imagen_vehiculo">
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Envios a todo el pais</p>
+                            <div>
+                                <p>Envios a todo el pais</p>
                             </div>
                         </div>
                     </div>
@@ -255,8 +255,8 @@
                             <div class="tarjeta_footer_1">
                                 <a href="https://www.google.com.ar/maps/place/Perfumer%C3%ADa+Beauty/@-31.8607334,-59.0335034,17z/data=!4m5!3m4!1s0x95b181a3663dd715:0x1a37de5ed7d7fd16!8m2!3d-31.8607334!4d-59.0313147"><img  src="img/logos_iconos/Sucursal.jpg" alt="imagen_sucursal"> </a>
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Sucursal</p>
+                            <div>
+                                <p>Sucursal</p>
                             </div>
                         </div>
                     </div>
@@ -265,8 +265,8 @@
                             <div class="tarjeta_footer_1">
                                 <img  src="img/logos_iconos/regalo.jpg" alt="imagen_headset">
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Tenemos los mejores precios</p>
+                            <div>
+                                <p>Tenemos los mejores precios</p>
                             </div>
                         </div>
                     </div>
@@ -275,8 +275,8 @@
                             <div class="tarjeta_footer_1">
                                 <a href="html/contacto.html"><img src="img/logos_iconos/contacto.jpg" alt="imagen_headset"></a>
                             </div>
-                            <div class="text-center">
-                                <p class="text_f1">Contactanos</p>
+                            <div>
+                                <p>Contactanos</p>
                             </div>
                         </div>
                     </div>
